--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -1,3 +1,8 @@
+
+.main-content {
+  padding-top: 70px; /* Adjust this value based on the height of your navbar */
+}
+
 .navbar {
     background-color: #388e3c; 
     padding: 15px 30px;
