quiz-component-card

--- a/frontend/src/Components/Quiz/Quiz.css
+++ b/frontend/src/Components/Quiz/Quiz.css
@@ -61,3 +61,22 @@
 .Quiz-image {
     background-size: cover;
 }
+/* quiz-card */
+.quiz-card-container{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    align-items: center;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    padding-top: 70px;
+}
+#quiz-card{
+    width: 800px;
+    height: 300px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+    border-radius: 20px;
+    cursor: pointer;
+
+}
