score-popup is added

--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -92,6 +92,9 @@
     background-color: #fff;
     border-radius: 5px;
   }
+  .quiz-scroll{
+    cursor: pointer;
+  }
   
   /* Mobile View */
   @media screen and (max-width: 768px) {
