--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -76,7 +76,19 @@
   }
   
   .signup-btn:hover, .login-btn:hover {
-    opacity: 0.8;
+    box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
+    transform: scale(1.05);
+  }
+
+  .logout-btn {
+    background-color: #fff; /* Darker green color for logout */
+    color: #388e3C;
+    border: 1px solid #66bb6a;
+  }
+  
+  .logout-btn:hover {
+    box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
+    transform: scale(1.05);
   }
   
   .hamburger {
