--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -1,139 +1,155 @@
-
 .main-content {
-  padding-top: 70px; /* Adjust this value based on the height of your navbar */
+  padding-top: 70px;
 }
 
 .navbar {
-    background-color: #388e3c; 
-    padding: 15px 30px;
-    position: fixed;
-    width: 100%;
-    top: 0;
-    left: 0;
-    z-index: 1000;
-  }
-  
-  .navbar-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-    width: 100%;
-  }
-  
-  .logo {
-    font-size: 24px;
-    color: #fff;
-    font-weight: bold;
-    text-decoration: none;
-  }
-  
+  background-color: #388e3c;
+  padding: 15px 30px;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+}
+
+.navbar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  width: 100%;
+}
+
+.logo {
+  font-size: 24px;
+  color: #fff;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.nav-links {
+  display: flex;
+  list-style-type: none;
+}
+
+.nav-links li {
+  margin: 0 15px;
+}
+
+.nav-links li a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 500;
+  transition: color 0.3s ease;
+}
+
+.quiz-menu {
+  background-color: transparent;
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-size: 18px;
+  transition: color 0.3s ease;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.quiz-menu:hover {
+  color: #66bb6a;
+}
+
+
+.nav-links li a:hover {
+  color: #66bb6a;
+}
+
+.auth-buttons {
+  display: flex;
+  gap: 10px;
+}
+
+.btn {
+  padding: 8px 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.signup-btn {
+  background-color: #66bb6a;
+  color: #fff;
+}
+
+.login-btn {
+  background-color: #fff;
+  color: #388e3c;
+  border: 1px solid #66bb6a;
+}
+
+.signup-btn:hover,
+.login-btn:hover {
+  box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
+  transform: scale(1.05);
+}
+
+.logout-btn {
+  background-color: #fff;
+  /* Darker green color for logout */
+  color: #388e3C;
+  border: 1px solid #66bb6a;
+}
+
+.logout-btn:hover {
+  box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
+  transform: scale(1.05);
+}
+
+.hamburger {
+  display: none;
+  cursor: pointer;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.hamburger .bar {
+  width: 25px;
+  height: 3px;
+  background-color: #fff;
+  border-radius: 5px;
+}
+
+.quiz-scroll {
+  cursor: pointer;
+}
+
+/* Mobile View */
+@media screen and (max-width: 768px) {
   .nav-links {
-    display: flex;
-    list-style-type: none;
-  }
-  
-  .nav-links li {
-    margin: 0 15px;
-  }
-  
-  .nav-links li a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 18px;
-    font-weight: 500;
-    transition: color 0.3s ease;
-  }
-  
-  .nav-links li a:hover {
-    color: #66bb6a; 
-  }
-  
-  .auth-buttons {
-    display: flex;
-    gap: 10px;
-  }
-  
-  .btn {
-    padding: 8px 16px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: bold;
-  }
-  
-  .signup-btn {
-    background-color: #66bb6a; 
-    color: #fff;
-  }
-  
-  .login-btn {
-    background-color: #fff;
-    color: #388e3c; 
-    border: 1px solid #66bb6a; 
-  }
-  
-  .signup-btn:hover, .login-btn:hover {
-    box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
-    transform: scale(1.05);
+    position: absolute;
+    top: 60px;
+    right: 0;
+    background-color: #388e3c;
+    flex-direction: column;
+    width: 100%;
+    display: none;
   }
 
-  .logout-btn {
-    background-color: #fff; /* Darker green color for logout */
-    color: #388e3C;
-    border: 1px solid #66bb6a;
+  .nav-links.mobile {
+    display: flex;
   }
-  
-  .logout-btn:hover {
-    box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
-    transform: scale(1.05);
+
+  .nav-links li {
+    margin: 15px 0;
   }
-  
+
   .hamburger {
+    display: flex;
+  }
+
+  .auth-buttons {
     display: none;
-    cursor: pointer;
-    flex-direction: column;
-    gap: 5px;
   }
-  
-  .hamburger .bar {
-    width: 25px;
-    height: 3px;
-    background-color: #fff;
-    border-radius: 5px;
-  }
-  .quiz-scroll{
-    cursor: pointer;
-  }
-  
-  /* Mobile View */
-  @media screen and (max-width: 768px) {
-    .nav-links {
-      position: absolute;
-      top: 60px;
-      right: 0;
-      background-color: #388e3c; 
-      flex-direction: column;
-      width: 100%;
-      display: none;
-    }
-  
-    .nav-links.mobile {
-      display: flex;
-    }
-  
-    .nav-links li {
-      margin: 15px 0;
-    }
-  
-    .hamburger {
-      display: flex;
-    }
-  
-    .auth-buttons {
-      display: none;
-    }
-  }
-  
+}
