quiz-timmer and image-slideshow

--- a/frontend/src/Components/Homepage-components/Homecard.css
+++ b/frontend/src/Components/Homepage-components/Homecard.css
@@ -10,7 +10,7 @@
   padding-right: 50px;
   width: 100vw;
   gap: 100px;
-  background-color: #f8f5f0; 
+  background: #f8f5f0;
   background-repeat: no-repeat;
   background-size:cover;
 }
